# C-KatceTerm

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README.md  TODO  asczukat.c  config-update  config.h.in  configure  configure.ac  katceterm.c  katceterm.h  katceterm.texinfo  katzuasc.c
demo/: asczukat.pas  baumdemo.kps  bsp01.pas  bsp02.pas  bsp03.pas  bsp04.pas  bsp05.pas  bsp06.pas  bsp07.pas  bsp08.pas  bsp09.pas  calldemo.kps  druck.ktx  editdemo.kps  filedemo.kps  i2c_test.kps  i2ctrans.kcd  i2ctrans.ktx  irqlpsto.kps  katzuasc.pas  mon68332.kcd  mon68332.ktx  polling.inc  ppwa_oc.asm  pwmanstg.asm  register.asm  serdemo.kps  setclrtp.asm  sm01.asm  spwm20.asm  spwm22.asm  trap1415.kps  upn.ktx  zeigfile.kps
doc/: art68681.txt
po/: Makefile.am  Makefile.in  de.mo  de.po
